tests/errors/pep492_badsyntax_async9.pyx
# mode: error
# tag: pep492, async

async def foo():
    await

_ERRORS = """
5:9: Expected an identifier or literal
"""
